ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    run: ghost-deploy 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
  type: NodePort
